# hoard_cache

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  libhoard-config-version.cmake.in  libhoard-config.cmake
examples/: CMakeLists.txt
examples/fibonacci/: CMakeLists.txt  fibonacci.cc
include/libhoard/: allocator.h  cache.h  doc_.h  equal.h  error_policy.h  expire_at_policy.h  expire_at_policy.ii  hash.h  impl.h  max_age_policy.h  max_age_policy.ii  max_size_policy.h  max_size_policy.ii  negative_cache_policy.h  pointer_policy.h  policies.h  policies.ii  refresh_policy.h  refresh_policy.ii  resolver_policy.h  resolver_policy.ii  shared_from_this_policy.h  thread_safe_policy.h  thread_safe_policy.ii  thread_unsafe_policy.h  weaken_policy.h
include/libhoard/asio/: refresh_policy.h  refresh_policy.ii  resolver_policy.h
include/libhoard/detail/: async_resolver_callback.h  basic_hashtable.h  basic_hashtable.ii  cache_async_get.h  cache_get.h  function_ref.h  function_ref.ii  hashtable.h  hashtable.ii  identity.h  identity_fn.h  identity_fn.ii  linked_list.h  linked_list.ii  mapped_type.h  mapped_type.ii  meta.h  notes.txt  pending.h  pending.ii  queue.h  queue.ii  refcount.h  refcount.ii  refresh_impl_policy.h  refresh_impl_policy.ii  thread_unsafe_policy.h  traits.h  value_type.h  value_type.ii
test/: CMakeLists.txt  cache.cc  cycle_pointer.cc  max_age_policy.cc  max_size_policy.cc  refresh_policy.cc  resolver_policy.cc  shared_pointer.cc  test_clock.h  test_main.cc
test/asio/: refresh_policy.cc  resolver_policy.cc
test/detail/: basic_hashtable.cc  hashtable.cc  linked_list.cc  mapped_type.cc  meta.cc  pending.cc  queue.cc  refcount.cc
